# Graph-agent

./: .dockerignore  .gitignore  COMPLETION_SUMMARY.md  DEPLOYMENT.md  INTEGRATION_TESTS.md  README.md  TESTING_GUIDE.md  docker-compose.yml  quickstart.sh  run_tests.sh
backend/: .env.example  Dockerfile  data_ingest.py  graph_builder.py  guardrails.py  llm.py  main.py  o2c.db  pyproject.toml  render.yaml  requirements.txt
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
