[project]
name = "sap-o2c-graph-system-backend"
version = "0.1.0"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "networkx>=3.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0"
]

[tool.poetry]
# for non-poetry managers it is okay as metadata marker

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
